--- a/planningbuddy/app/build.gradle
+++ b/planningbuddy/app/build.gradle
@@ -35,6 +35,11 @@ android {
 }
 
 dependencies {
+    def nav_version = "2.3.0"
+
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
+
     implementation "androidx.appcompat:appcompat:$rootProject.appCompatVersion"
 
     implementation "androidx.room:room-runtime:$rootProject.roomVersion"
